Changes to fav and history pages

--- a/website/templates/History.html
+++ b/website/templates/History.html
@@ -29,6 +29,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </ul>
             </nav>
         </header>   
+        <div class="Title">
+            <h3>Recently <mark>Viewed</mark> Games</h3>
+        </div>
         <div class="container">
         <!-- Game 9 -->
         <div class="game">
