--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,4 +1,3 @@
-
 /* Reset some default browser styles */
 body, h1, h2, h3, p, ul, li, form, input, button {
     margin: 0;
@@ -9,7 +8,7 @@ body, h1, h2, h3, p, ul, li, form, input, button {
 /* Apply a background color and font styles to the entire page */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0; /* Light gray background */
+    background-color:#f8f8f8; /* Light gray background */
     color: #333;
 }
 
@@ -141,3 +140,17 @@ div.game {
     color: #333;
     padding: 44px;
 }
+.Title{
+    position: relative;
+    bottom: -80px;
+    right: -90px;
+    font-size: 23px;
+    color:#333333;
+}
+mark{
+    background: linear-gradient(-100deg, hsla(48,92%,75%,.3), hsla(48,92%,75%,.7) 95%, hsla(48,92%,75%,.1));
+    border-radius: 1em 0;
+    padding: .5rem;
+    color:#333333;
+}
+
