--- a/website/templates/Fav.html
+++ b/website/templates/Fav.html
@@ -11,7 +11,33 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="{% static 'images/GGicon.png' %}">
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" />
+        <style> 
+            .heart:hover {
+                color: #14e3e8;
+                cursor: pointer;
+            }
+            
+            .heart{
+                color: #ff069a;
+                background-color: transparent;    
+                font-size: 30px;    
+            }
 
+            button{
+                border: none;
+                background: transparent; 
+                position: absolute;
+                z-index: 2;
+                left: -30px;
+            }
+            .game {
+                position: relative;
+            }
+
+
+          </style>  
+            
     </head>
     <body>
         <header>
@@ -29,18 +55,40 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/html.html to edit this
                 </ul>
             </nav>
         </header>   
+        <div class="Title">
+            <h3>Games You <mark>Liked</mark></h3>
+        </div>
         <div class="container">
         <div class="game">
+            <button class="remove-game" data-game-id="2"><i class="fa fa-heart heart fa-2x heart"  aria-hidden="true" id="heart"></i></button>
             <a href="{% url 'game_info_page' %}?img=2" class="game-title">Lorem Ipsum</a>
             <a href="{% url 'game_info_page' %}?img=2"><img src="{% static 'images/game2.png' %}" class="game-image"></a>
         </div>
 
         <!-- Game 3 -->
         <div class="game">
+            <button class="remove-game" data-game-id="3"><i class="fa fa-heart heart fa-2x heart"  aria-hidden="true" id="heart"></i></button>
             <a href="{% url 'game_info_page' %}?img=3" class="game-title">Lorem Ipsum</a>
             <a href="{% url 'game_info_page' %}?img=3"><img src="{% static 'images/game3.png' %}"class="game-image"></a>
         </div>
         </div>
+
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                const removeButtons = document.querySelectorAll(".remove-game");
+            
+                removeButtons.forEach((button) => {
+                    button.addEventListener("click", function () {
+                        const gameBlock = this.closest(".game");
+                        if (gameBlock) {
+                            gameBlock.remove();
+                        }
+                    });
+                });
+            });
+            </script>
+            
+            
 
     <footer>
         <p>&copy; 2023 GameGeek All rights reserved.</p>
