--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -42,10 +42,7 @@
             padding-bottom: 19px;
 		}
 		ul{
-			margin: 0;
-           padding: 0;
            list-style: none;
-		   margin-top: -15px;
 		}
 		#footer{
 			justify-content: space-between;
@@ -58,6 +55,9 @@
 		a{
 			font-weight:500;
 		}
+		.footer-area {
+  padding: 120px 0px;
+}
 	</style>
 </head>
 <body>
@@ -238,7 +238,7 @@
 			<div class="row" id="footer">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">Our Guarantee to Safety and Gaming</h2>
+						<h2 class="widget-title">Our Guarantee</h2>
 						<p>At Game Geek, we combine entertainment along with safeguarding. We're committed to enhancing the game-finding experience by expertly tailoring it to your age and preferences as a cutting-edge platform.</p>
 					</div>
 				</div>
@@ -255,7 +255,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
 						<h2 class="widget-title">Pages</h2>
-						<ul>
+						<ul class= "outerList">
 							<details><summary><li class="gmaes">Games</li></summary>
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
