--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -36,8 +36,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.css">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<style>
-
+	<style>   
 	    .checked {
 	      color: orange;
 		}
@@ -70,6 +69,10 @@
 			width: 2129px;
 		}
 
+		option{
+			margin-left: 2px;
+		}
+
 		select {
 			appearance: none;
 			background: transparent;
@@ -87,7 +90,7 @@
             background-size: 0.65rem auto;
 		}
 
-		summary {
+		.category summary {
 			font-weight: bold;
 			padding: 0.5em;
 			margin-top: -10px;
@@ -132,10 +135,7 @@
             padding-bottom: 19px;
 		}
 		ul{
-			margin: 0;
-           padding: 0;
            list-style: none;
-		   margin-top: -15px;
 		}
 		#footer{
 			justify-content: space-between;
@@ -143,7 +143,7 @@
 		summary::-webkit-details-marker {
           display: none;}
 
-		  summary {
+		.summaryFooter{
     list-style-type: none; /* For non-Chrome browsers */}
 		button{
 			font-weight: bolder;
@@ -153,6 +153,14 @@
          background-color: #06f7ff;
          color: #fff;
 		}
+
+		.gmaes{
+			font-weight: 400;
+		}
+
+		.footer-area {
+  padding: 120px 0px;
+}
 
 		
     </style>
@@ -610,17 +618,13 @@
 	</div>
 	<!-- end games -->
 
-	<!-- logo carousel -->
-	
-	<!-- end logo carousel -->
-
 	<!-- footer -->
 	<div class="footer-area">
 		<div class="container">
 			<div class="row" id="footer">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">Our Guarantee to Safety and Gaming</h2>
+						<h2 class="widget-title">Our Guarantee</h2>
 						<p>At Game Geek, we combine entertainment along with safeguarding. We're committed to enhancing the game-finding experience by expertly tailoring it to your age and preferences as a cutting-edge platform.</p>
 					</div>
 				</div>
@@ -637,8 +641,8 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
 						<h2 class="widget-title">Pages</h2>
-						<ul>
-							<details><summary><li class="gmaes">Games</li></summary>
+						<ul class= "outerList">
+							<details><summary class="summaryFooter"><li class="gmaes">Games</li></summary>
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
