--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -42,10 +42,7 @@
             padding-bottom: 19px;
 		}
 		ul{
-			margin: 0;
-           padding: 0;
            list-style: none;
-		   margin-top: -15px;
 		}
 		#footer{
 			justify-content: space-between;
@@ -55,6 +52,9 @@
 
 		  summary {
     list-style-type: none; /* For non-Chrome browsers */}
+	.footer-area {
+  padding: 120px 0px;
+}
 	</style>
 
 </head>
@@ -241,7 +241,7 @@
 						<h2>We are <span class="pink-text">Game Geek</span></h2>
 						<p> Game Geek is a platform that offers multiple in app video games for diiferent age groups. In Game Geek we prioritize our user's safty. Therefore, we aim to help users find video games that suits their age group. </p>
 						
-						<a href="about.html" class="boxed-btn mt-4">know more</a>
+						<a href="{% url 'about' %}" class="boxed-btn mt-4">know more</a>
 					</div>
 				</div>
 			</div>
@@ -254,7 +254,7 @@
 			<div class="row" id="footer">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">Our Guarantee to Safety and Gaming</h2>
+						<h2 class="widget-title">Our Guarantee</h2>
 						<p>At Game Geek, we combine entertainment along with safeguarding. We're committed to enhancing the game-finding experience by expertly tailoring it to your age and preferences as a cutting-edge platform.</p>
 					</div>
 				</div>
@@ -271,7 +271,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
 						<h2 class="widget-title">Pages</h2>
-						<ul>
+						<ul class= "outerList">
 							<details><summary><li class="gmaes">Games</li></summary>
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'index' %}">All Games</a></li>
