--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -44,10 +44,7 @@
             padding-bottom: 19px;
 		}
 		ul{
-			margin: 0;
-           padding: 0;
            list-style: none;
-		   margin-top: -15px;
 		}
 		#footer{
 			justify-content: space-between;
@@ -56,7 +53,18 @@
           display: none;}
 
 		  summary {
-    list-style-type: none; /* For non-Chrome browsers */}
+    list-style-type: none; /* For non-Chrome browsers */
+       }
+	    .breadcrumb-section {
+           padding: 107.2px 0;
+		}
+		.breadcrumb-text{
+			margin-top: 30px;
+		}
+		.footer-area {
+  padding: 120px 0px;
+}
+
 
 	</style>
     
@@ -178,14 +186,6 @@
 					</div>
         <!-- end contact form -->
     
-        <!-- find our location -->
-    
-        <!-- end find our location -->
-    
-        <!-- google map section -->
-    
-        <!-- end google map section -->
-    
     
 	<!-- footer -->
 	<div class="footer-area">
@@ -193,7 +193,7 @@
 			<div class="row" id="footer">
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
-						<h2 class="widget-title">Our Guarantee to Safety and Gaming</h2>
+						<h2 class="widget-title">Our Guarantee</h2>
 						<p>At Game Geek, we combine entertainment along with safeguarding. We're committed to enhancing the game-finding experience by expertly tailoring it to your age and preferences as a cutting-edge platform.</p>
 					</div>
 				</div>
@@ -210,7 +210,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box pages">
 						<h2 class="widget-title">Pages</h2>
-						<ul>
+						<ul class= "outerList">
 							<details><summary><li class="gmaes">Games</li></summary>
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
