--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -202,7 +202,7 @@
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'index' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'index' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'index' %}">Recently Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'index' %}">Downloaded Games</a></li>
 								</ul></details>
 							<li class="dash"><a href="{% url 'index' %}">Profile</a></li>
 							<li class="dash"><a href="{% url 'index' %}">Contact Us</a></li>
