--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -176,7 +176,7 @@ ul li{
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Downloaded Games</a></li>
 											
 										</ul>
 									</li>
@@ -206,8 +206,8 @@ ul li{
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>All the fun is here</p>
 						<h1>Favourite Games</h1>
+						<p>All the fun is here</p>
 					</div>
 				</div>
 			</div>
@@ -292,7 +292,7 @@ ul li{
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
