--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -33,6 +33,8 @@
 	<!-- responsive -->
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 
+
+
 	<style>
 		.games{
 			color: #fff;
@@ -52,15 +54,16 @@
 
 		  summary {
            list-style-type: none; /* For non-Chrome browsers */}
+
 		button{
 			font-weight: bolder;
 		}
-		.breadcrumb-section {
-           padding: 107.2px 0;
-		}
-		.breadcrumb-text{
-			margin-top: 30px;
-		}  
+		h6{
+        background-image: linear-gradient(to left, #07212e, #638494);
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+}
 
 	</style>
 </head>
@@ -96,7 +99,7 @@
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Downloaded Games</a></li>
 											
 										</ul>
 									</li>
@@ -119,19 +122,14 @@
 		</div>
 	</div>
 	<!-- end header -->
-
-	<!-- search area -->
-
-	<!-- end search arewa -->
-	
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
+						<h1>Downloaded Games</h1>
 						<p>All the fun is here</p>
-						<h1>Recently Downloaded Games</h1>
 					</div>
 				</div>
 			</div>
@@ -158,6 +156,10 @@
 						<h3>Lorem ipsum</h3>
 						
 						<a href="{% url 'game_info_page' %}?img=1" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 10/12/2023</h6>
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center berry">
@@ -168,6 +170,10 @@
 						<h3>Lorem ipsum</h3>
 						
 						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
+						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center lemon">
@@ -177,8 +183,12 @@
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=3" class="cart-btn">More info</a>
-					</div>
+						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
+						</div>
+				</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
@@ -187,8 +197,12 @@
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=9" class="cart-btn">More info</a>
-					</div>
+						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
+						</div>
+				</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
@@ -197,8 +211,12 @@
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=7" class="cart-btn">More info</a>
-					</div>
+						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
+						</div>
+				</div>
 				</div>
 				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
@@ -207,8 +225,12 @@
 						</div>
 						<h3>Lorem ipsum</h3>
 						
-						<a href="{% url 'game_info_page' %}?img=10"class="cart-btn">More info</a>
-					</div>
+						<a href="{% url 'game_info_page' %}?img=2" class="cart-btn">More info</a>
+						<br>
+						<div style="display: flex; align-items: center;">
+							<h6 style="margin-left: 55px; margin-top: 20px; font-size: 15px">Downloaded Date: 08/12/2023</h6>
+						</div>
+				</div>
 				</div>
 			</div>
 
@@ -217,8 +239,8 @@
 					<div class="pagination-wrap">
 						<ul>
 							<li><a href="#">Prev</a></li>
-							<li><a href="#">1</a></li>
-							<li><a class="active" href="#">2</a></li>
+							<li><a class="active" href="#">1</a></li>
+							<li><a href="#">2</a></li>
 							<li><a href="#">3</a></li>
 							<li><a href="#">Next</a></li>
 						</ul>
@@ -261,7 +283,7 @@
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
