--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -91,7 +91,7 @@
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Downloaded Games</a></li>
 											
 										</ul>
 									</li>
@@ -125,8 +125,8 @@
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Get 24/7 Support</p>
 						<h1>Contact Us</h1>
+						<p>Get 24/7 Support</p>
 					</div>
 				</div>
 			</div>
@@ -194,7 +194,7 @@
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
