--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -207,7 +207,11 @@ ul li{
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>Favourite Games</h1>
-						<p>All the fun is here</p>
+						<p>
+						<span class="blue">All</span>
+							<span class="black"> the fun</span>
+							<span class="pink">is here</span>
+						</p>
 					</div>
 				</div>
 			</div>
