--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -166,7 +166,6 @@
 			margin: 20px;
 		}
 
-		
     </style>
 
 </head>
@@ -235,7 +234,11 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>All Games</h1>
-						<p>where happiness is met</p>
+						<p>
+						<span class="blue">where</span>
+							<span class="black"> happiness</span>
+							<span class="pink">is met</span>
+						</p>
 					</div>
 				</div>
 			</div>
