--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -129,7 +129,14 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>Downloaded Games</h1>
-						<p>All the fun is here</p>
+						<p>
+						<span class="blue">All</span>
+							<span class="black"> the fun</span>
+							<span class="pink">is here</span>
+
+
+
+						</p>
 					</div>
 				</div>
 			</div>
