--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -126,7 +126,15 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>Contact Us</h1>
-						<p>Get 24/7 Support</p>
+						<p>
+						<span class="blue">Get</span>
+							<span class="black"> 24/7</span>
+							<span class="pink">Support</span>
+
+
+
+
+						</p>
 					</div>
 				</div>
 			</div>
@@ -141,7 +149,7 @@
 				<div class="col-lg-8 mb-5 mb-lg-0">
 					<div class="form-title">
 						<h2>Have you any question?</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, ratione! Laboriosam est, assumenda. Perferendis, quo alias quaerat aliquid. Corporis ipsum minus voluptate? Dolore, esse natus!</p>
+						<p>We are always delighted to hear from you. Your questions, comments, or suggestions are highly appreciated. Please feel free to contact us anytime!</p>
 					</div>
 				 	<div id="form_status"></div>
 					<div class="contact-form">
