--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% block brand %}
+{% csrf_token %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,9 +10,10 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>Login</title>
+	<title>Sign Up</title>
 
 	<!-- favicon -->
+
 	<link rel="shortcut icon" type="image/png" href="{% static 'img/Games/GGicon.png' %}">
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
@@ -55,11 +57,92 @@
 	.footer-area {
   padding: 120px 0px;
 }
+.back{
+height:100%;
+margin:0;
+margin-top:-12%;
+background: rgb(21,232,237);
+background: linear-gradient(95deg, rgba(21,232,237,1) 0%, rgba(168,168,168,0.02006740196078427) 52%, rgba(255,6,154,1) 100%);
+		}
+
+
+.form-container form {
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    padding: 25px; /* Increase padding for input boxes */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+
+    width: 50%; /* Reduce the width of the form */
+    margin: 20% auto; /* Adjust vertical margin */
+}
+
+
+.form-container {
+     background-color: transparent;
+
+}
+
+
+
+.input-box {
+    width: 60%; /* Make inputs take full width of the form */
+    padding: 10px; /* Reduce padding for inputs */
+
+
+ box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.input-box:focus {
+    border: 2px solid #ff069a;
+}
+
+.checkbox-container {
+    text-align: left;
+}
+
+.checkbox-container input {
+    margin-right: 5px;
+}
+
+.checkbox-container label {
+    font-weight: bold;
+    color: #333;
+
+}
+
+.alt-link {
+    color: #ff069a;
+    text-decoration: none;
+}
+
+.input-pair {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* This ensures labels and inputs start from left to right */
+    margin-bottom: 10px;
+}
+
+.input-pair label {
+    flex: 0 0 20%; /* Adjust label width as needed */
+    font-weight: bold;
+    text-align:left;
+}
+
+
+
+
+
+
 
 	</style>
+
 </head>
 <body>
-	
+
 	<!--PreLoader-->
     <div class="loader">
         <div class="loader-inner">
@@ -67,7 +150,7 @@
         </div>
     </div>
     <!--PreLoader Ends-->
-	
+
 	<!-- header -->
 	<div class="top-header-area" id="sticker">
 		<div class="container">
@@ -76,7 +159,7 @@
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-						<!-- <a href="{% url 'index' %}"> -->
+						<!--	<a href="{% url 'index' %}"> -->
 								<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 							</a>
 						</div>
@@ -85,33 +168,44 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-							
+
 								<li>
 									<li>
 										<div class="header-icons">
-										
-											<li class="current-list-item" ><a href="{% url 'index' %}">Home</a>
-											</li>
-										</div>
+
+										<a class="boxed-btn" id="login-btn" href="{% url 'index' %}">Home</a>
+									</div>
 									</li>
 								</li>
 							</ul>
 						</nav>
+
+						<div class="mobile-menu"></div>
+						<!-- menu end -->
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- end header -->	
-	
+	<!-- end header -->
+
+	<!-- search area -->
+
+	<!-- end search arewa -->
+
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<p>Let the fun start</p>
-						<h1>Log in</h1>
+
+						<h1>Log In</h1>
+						<p>
+						    <span class="blue">Let's </span>
+    <span class="black">continue</span>
+    <span class="pink"> the fun!</span>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -119,42 +213,43 @@
 	</div>
 	<!-- end breadcrumb section -->
 
+	<!-- contact form -->
+	<div class="back">
 	<div class="contact-from-section mt-150 mb-150">
 		<div class="container">
-			
-					<div class="form-title">
-											</div>
-				 	<div id="form_status"></div>
-					 <div class="form-container">
-						<br>
-						<h3>Log in</h3>
-						
-						<br>
-						<form action="{% url 'estimate' %}"method="POST">
-                            {% csrf_token %}
-						   
-							<input type="text" id="username" class="input-box" name="username" required placeholder="Username">
-							<br><br>
-						 
-						   
-							<input type="password" id="password" class="input-box" name="password" required placeholder="Password">
-							<br><br>
-							
-			
-				<input type="submit" class="boxed-btn" value="Log in"> 
-				
-						   
-				
-						</form>
-						<br>
-						<label>Don't have an account? <a href="{% url 'signup' %}"  class="alt-link"> Sign up</a></label>
-				
-						</div>
-				
-			
-			
-		</div>
+    <div class="form-container">
+<form action="{% url 'estimate' %}" method="POST">
+    {% csrf_token %}
+
+    <div class="input-pair">
+        <label for="username">Username:</label>
+        <input type="text" id="username" class="input-box" name="username" required placeholder="Enter your username">
+    </div>
+    <div class="input-pair">
+        <label for="email">Email:</label>
+        <input type="email" id="email" class="input-box" name="email" required placeholder="Enter your email">
+    </div>
+    <div class="input-pair">
+        <label for="password">Password:</label>
+        <input type="password" id="password" class="input-box" name="password" required placeholder="Enter your password">
+    </div>
+
+
+
+
+   <br>
+    <input type="submit" id="LogIN" value="Log In">
+    <br>
+
+</form>
+
+
+
+    </div>
+</div>
 	</div>
+		</div>
+	<!-- end contact form -->
 
 
 	<!-- footer -->
@@ -191,14 +286,14 @@
 							<li class="dash"><a href="{% url 'index' %}">Contact Us</a></li>
 							<li class="dash"><a href="{% url 'index' %}">About Us</a></li>
 						</ul>
-						
+
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- end footer -->
-	
+
 	<!-- copyright -->
 	<div class="copyright">
 		<div class="container">
@@ -211,7 +306,7 @@
 		</div>
 	</div>
 	<!-- end copyright -->
-	
+
 	<!-- jquery -->
 	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 	<!-- bootstrap -->
@@ -235,7 +330,64 @@
 	<!-- main js -->
 	<script src="{% static '/js/main.js' %}"></script>
 
+	<script>
+        // Function to show the age warning popup
+        function showAgeWarning() {
+          // Create a modal element
+          const modal = document.createElement("div");
+          modal.classList.add("modal");
 
+          // Create the content for the modal
+          const modalContent = document.createElement("div");
+          modalContent.classList.add("modal-content");
+
+          // Create the warning message
+          const warningMessage = document.createElement("p");
+          warningMessage.textContent = "Dear user, if you are under the age of 17, you must have adult supervision while registering for Game Geek. Thank you.";
+
+          // Create a close button
+          const closeButton = document.createElement("button");
+          closeButton.textContent = "Okay";
+          closeButton.addEventListener("click", hideAgeWarning);
+
+          // Append elements to the modal
+          modalContent.appendChild(warningMessage);
+          modalContent.appendChild(closeButton);
+          modal.appendChild(modalContent);
+
+          // Append the modal to the body
+          document.body.appendChild(modal);
+        }
+
+        // Function to hide the age warning popup
+        function hideAgeWarning() {
+          const modal = document.querySelector(".modal");
+          if (modal) {
+            modal.style.display = "none";
+          }
+        }
+
+        // Show the age warning when the page loads
+        showAgeWarning();
+      </script>
+      <script>
+        // Function to handle the checkbox state and enable/disable the "Next" button
+        function handleCheckbox() {
+          const agreeCheckbox = document.getElementById("agree");
+          const nextButton = document.getElementById("nextButton");
+
+          if (agreeCheckbox.checked) {
+            nextButton.disabled = false;
+          } else {
+            nextButton.disabled = true;
+          }
+        }
+
+        // Add an event listener to the checkbox to handle changes
+        const agreeCheckbox = document.getElementById("agree");
+        agreeCheckbox.addEventListener("change", handleCheckbox);
+      </script>
 </body>
+
 {% endblock %}
 </html>
