--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -129,7 +129,14 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
 						<h1>Lorem ipsum</h1>
-						<p>See more Details</p>
+						<p>
+							<span class="blue">See</span>
+							<span class="black"> more</span>
+							<span class="pink">Details</span>
+
+
+
+						</p>
 					</div>
 				</div>
 			</div>
