--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -55,6 +55,9 @@
 	.footer-area {
   padding: 120px 0px;
 }
+		div img{
+		margin-left:10%}
+
 	</style>
 
 </head>
@@ -90,7 +93,7 @@
 								<li>
 									<div class="header-icons">
 									
-										<a class="boxed-btn" id="login-btn" href="{% url 'login' %}">Login</a>
+										<a class="boxed-btn" id="login-btn" href="{% url 'login' %}">Log In</a>
 									</div>
 								</li>
 							</ul>
@@ -230,17 +233,16 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
-					<div class="abt-bg">
-						<a href="https://www.youtube.com/watch?v=DBLlFWYcIGQ" class="video-play-btn popup-youtube"><i class="fas fa-play"></i></a>
+					<img src="{% static 'img/Games/logo.png' %}" alt="logo" class="fill-div-image" width="400" height="400">
 
-					</div>
+
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
 						<p class="top-sub">Since Year 2023</p>
 						<h2>We are <span class="pink-text">Game Geek</span></h2>
-						<p> Game Geek is a platform that offers multiple in app video games for diiferent age groups. In Game Geek we prioritize our user's safty. Therefore, we aim to help users find video games that suits their age group. </p>
-						
+						<p>Game Geek is a platform that offers multiple in-app video games for different age groups. In Game Geek we prioritize our user's safety. Therefore, we aim to help users find video games that suit their age group. </p>
+
 						<a href="{% url 'about' %}" class="boxed-btn mt-4">know more</a>
 					</div>
 				</div>
